<resources>
    <string name="app_name">TechFest Registration</string>
    <string name="title_activity_list_of_colleges">List_of_colleges</string>
    <string name="action_settings">Settings</string>
    <string name="search_clg">Enter college/institute name…</string>
    <string name="welcome">Welcome!</string>
    <string name="student">STUDENT</string>
    <string name="admin_icon">admin icon</string>
    <string name="student_icon">student icon</string>
    <string name="admin">ADMIN</string>
    <string name="login">Login here as :</string>
    <string name="dtu_logo">INVICTUS ka logo</string>
    <string name="reg">Register</string>
    <string name="nsut_logo">INNOVISION ka logo</string>
    <string name="mait_logo">MAIT ka logo</string>
    <string name="iitd_logo">TRYST ka logo</string>
    <string name="desc">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non feugiat nisl. Duis molestie ac eros a efficitur. Ut eu enim non mauris dapibus semper at eget nisl. Phasellus ex ante, ultricies consectetur dapibus eu, sodales et dui. Sed ac nisi vel orci cursus dignissim in dictum lacus. Nam ultrices quis velit vel venenatis. Sed et auctor massa. Integer posuere euismod velit, non posuere risus finibus nec.
    \nIn eget ligula nec nisl feugiat pulvinar. Pellentesque suscipit lorem congue posuere hendrerit. Donec a nisi bibendum nibh euismod porta. Sed sollicitudin purus non nulla facilisis commodo. Quisque in urna id magna commodo efficitur. Maecenas eu tellus non nisl placerat volutpat. Morbi faucibus porta felis, vitae tristique augue fringilla id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris nec facilisis nisi, id congue arcu. Mauris pharetra lorem ipsum, ut pellentesque leo blandit non. Donec vitae ultricies libero, id placerat nibh.
    \nMaecenas pulvinar cursus enim, vel dapibus magna auctor at. Mauris nisi turpis, malesuada at laoreet vitae, posuere sit amet risus. In commodo eget nunc non rutrum. Morbi quis pulvinar velit. Pellentesque egestas sollicitudin quam viverra aliquet. Fusce vitae risus non ante posuere fermentum at a justo. Donec vitae rhoncus justo. Duis ultrices bibendum diam, ac efficitur leo mattis at. Sed imperdiet enim risus, quis varius odio tincidunt vitae. Nam mollis nisi vel tempor rhoncus. Vestibulum eget nunc neque. Fusce egestas ultricies enim, eget iaculis odio. Cras sit amet risus tortor. Etiam ut posuere orci.
    </string>
    <string name="bc">
    It is a fresh and offbeat concept - where the participants need to write and compile their program with the monitor screens switched off. The event will span over 2 hours.
    The details are as follows:\n\n\nThe participants will be given 3 problems of varying difficulty levels.
    \n\nThe first problem will be a warm up question. The participants will be provided a syntactically incorrect code written on paper. The participants will be required to identify the errors and type other two questions will be problem statements based on basic programming concepts.
    \n\nEach team will be allowed one free “Screen time” (where the monitor screen can be turned on for 60 seconds), after which they will be penalised with 3 points for each extra screen time.
    \n\nEach team can avail a maximum of 5 screen times.
    \n\nAt a time only 5 teams will be allowed to avail the facility of Screen Time, the slots for which will be allotted on a first come first serve basis.
    </string>
    <string name="cil">
        Code in Less is an onsite competitive programming contest where the participants don’t just need to solve the problems but write their code using the minimum number of characters. Solve the problems, optimize your code and shorten it. The shortest solution wins it all!
        n\nLesser, Faster, Better
    </string>
    <string name="sf">
        Do you think you have what it takes to be a great coder? You know a language in and out? This time it is not only about getting the logic and algorithms right but also to code it correct knowing the ifs and buts of the programming language.
        \n\nSo make teams of two and be here to prove your skills. Teams can be cross-school and cross-college. Lone wolves are also allowed. First round will be pen-paper based and you have to opt in either for C++ or Java. Second round will be computer based and in Python3. You will be allowed to interpret the code only twice during the whole round. No IDE or internet connection will be provided. Minimum time and least number of changes will be the criteria for judging along with the fully functional code.
        \n\nNow get ready to start debugging and brag by finding the bugs hiding in the covers of the seemingly well-knit code.
    </string>
    <string name="sr">
        It\'s not just a regular contest challenging your problem-solving skills. It\'s SWITCHEROO. It’s a contest testing your abilities to work as a team. The competition not only examines your skills as to how well you coordinate with your partner but also how analytical you are in an isolated and tensed situation.
    </string>
    <string name="bf">
Implementation is overrated. In this contest, let logic take the front seat.
        \n\nBrainFuzz is an on-site algorithm design contest which requires knowledge of algorithm design, analysis and data structures. This is a chance for you to go head to head with some of the best algorithmic brains of the country and win exciting prizes by proving your algorithmic prowess.
    </string>
    <string name="pe">
        The event Project Euler invites maths and computer science enthusiasts to participate in “The Euler’s Islands” - a fusion of Project Euler questions and Forbidden Island(Board Game).
        \n\nFind effective solutions of some interesting problems and win the game. The Game is setup on the islands. The islands will be based on math concepts that appear frequently in project Euler problems, say prime island for prime no. based questions.
        \n\nTo attempt the maximum no. of question from a certain island the team of 1 to 3 people will have to make decisions that ensures that the island does not sink. Team with max points wins. For a particular team questions end either when the time is up or when all islands sink.
        \n\nThe problems difficulty level increases gradually so teams have to use Maths and Computer Science skills together to trace the distance.
    </string>
    <string name="scr">
Scripting Challenge is an online event which organised in Esya, techfest of IIIT-D. This event is where some of the enthusiastic coders compete against each other to solve some challenges. These challenges will test your basic and advanced coding skills.
    </string>
    <string name="iiitd_logo">ESYA ka logo</string>
    <string name="igdtuw_logo">INNERVE ka logo</string>
    <string name="bytes">
        Imagine being in a whole new world. Everything about the people here is different, the language they speak, the way they walk, even how they greet. The only thing you know you can rely on is your logic and ability to adapt. That\'s exactly the situation we\'re gonna put you in Bytes.
        \nYou will be given a random, but less known programming language and a set of questions. You will have to solve them onsite and on time!
        \nCash prize of 10,000 up for grabs!
        \n\nDate: 9th February, 2020
        \nTime: 12 -2p.m.
        \nVenue: SPS-14
        \nTeam Size: 1
    </string>
    <string name="sc">
        Are you a sudoku champ?
\nAre you a pro coder?
\nWe give you the opportunity to be both!!
        \nInvictus , the annual Technological fest of DTU brings you Sudo code, an innovative game to baffle your minds and proclaim yourself as The Ultimate Sudoku Champ!

\n\nPrelims :  8th Feb \'20
\nFinals   :  9th Feb \'20
        \nTimings :  12 -2p.m.
\nVenue   :  TW1GF1
    </string>
    <string name="pd">If you are the Ross to a Rachel,  sharing the iconicness of SpongeBob and Patrick,  adventuring hand in hand like Sherlock and Watson  and partnering like Veeres, Invictus\'20 bring \'Programmer\'s DATE\' for unlocking yet another achievement with your other half.
        \nThis compatibility check trespasses the limits of mind reading, guessworks and mutual understanding by raising the bar to consistent coding dually. It is an ultimate coding challenge where two team members will be seated in different rooms and given separate coding questions. The members will switch PCs after regular intervals and continue with the other person\'s code. No communication between the members is allowed during the competition. Both the members will be coding on different platforms. One person will code on Beatest and the other on Hackerrank. It is not only switching of codes, but platforms as well.
        \n\nAlso, Extra points will be provided if they answer some questions about each other correctly during the event. So make sure you know your partner well!
        \n\nImportant: It is not necessary to team up with the opposite gender, guys and girls you can participate with your friends too.
        \n\nDate: 8th February, 2020
        \nTime: 10a.m.-1p.m.
        \nVenue: SPS-14
        \nTeam Size: 2
    </string>
    <string name="cg">
        <i>Size matters!</i>
        \n\nDoes the idea  “The more, the better” fascinate you??
\nWell if so, you might reconsider your thoughts!
\nBecause Invictus 2020, the annual Technological fest of DTU brings  CodeGolf, an online programming contest where the shortest code is the winner.

\nSo lessen your code and prepare algorithms and be ready for CodeGolf!
        \n\nDate: 9th February, 2020
        \nTime: 11a.m.-1p.m.
        \nVenue: Computer Networking Lab
        \nTeam Size: 1-2
    </string>
    <string name="inf">
        Are you a Coding Guru or a Maths Geek?
        \nOr maybe both?
        \n\nSociety of Software Engineering - Delhi Technological University, in partnership with Samsung, GeeksforGeeks and Coding Ninjas, presents INFINITY, an exhilarating contest which tests your ability to solve mathematical problems with the power of programming.
        \n\nTop 10-20 contestants from the online round will get the chance to face off in the onsite round. Get your boots on for this unique challenge, because prizes worth ₹4,000 are up for grabs!

\n\nOnline Round
\n7:00 PM - 9:00 PM
\n7th February 2020
\nCoding Ninjas Platform

\n\nOnsite Round
\n12:00 PM - 2:00 PM
\n9th February 2020
\nDBMS Lab, DTU
    </string>
    <string name="ct">
        <i> Code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live</i> ~ John Woods
        \n\nMACS-DTU and INNOVA in association with INVICTUS \'20 presents Codethon, a platform where all Competitive coding geeks will encounter umpteen programming problems in a competitive zone.
        \nWhat are you waiting for?
\nThis is the apt opportunity to display your eloquence for coding and, unleash the coder inside you.
\nSo prepare yourself for the clash of the coders!!
        \n\nMay the best coder win this battle!!
        \n\nRounds: Prelims and Finals
\n\nDate: 9th February
        \nTime: 12:00p.m. onwards
\nVenue: Computational Lab
\nTeam size: 1-3
\nPrizes worth: 10,000 INR
    </string>
    <string name="cn">
        Can\'t you C yourself without C++?
\nThen you\'re here at the right place! CSI-DTU, in association with Invictus, the annual Technological fest of DTU brings you the much awaited programming quiz, Cranium, to set your nerves wracking and pens scribbling.
        \n\nRounds: Prelims and Finals
\n\nDate: 8th(Prelims) and 9th(Finals) February 2020
        \nTime: 14:00 -16:00p.m.
\nVenue: Computational Lab
    </string>
</resources>
